set fixed position on UI drawer and conditionally set overflow style property on body element

--- a/src/components/UIDrawer/UIDrawer.css
+++ b/src/components/UIDrawer/UIDrawer.css
@@ -1,7 +1,7 @@
 .ui-drawer-container {
     height: 100vh;
     width: 100vw;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
 }
